3_Ano/2_Semestre/C/P/2_Guiao/bloco2/b2_04/PrefixCalculator.g4
grammar PrefixCalculator;

program:
    stat* EOF;

stat:
    expr? NEWLINE;

expr:
        op=('*'|'/'|'%'|'+'|'-') expr expr #ExprPrefix
    |   Number #ExprNumber;


Number: [0-9]+; 
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
